[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
strum_macros = "0.25.1"
tokio = { version = "1.29.1", features = ["full"]}
uuid = {version = "1.4.0", features = ["serde"]}
